add padding to "list-filter"

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,23 +56,27 @@
 			<section class="portfolio-section">
 				<div class="container">
 					<ul class="list-filter wrap list">
-						<li class="list-item">
-							<button class="button" type="button">Усі</button>
-						</li>
-						<li class="list-item">
-							<button class="button" type="button">Веб-сайти</button>
-						</li>
-						<li class="list-item">
-							<button class="button" type="button">Додатки</button>
-						</li>
-						<li class="list-item">
-							<button class="button" type="button">Дизайн</button>
-						</li>
-						<li class="list-item">
-							<button class="button" type="button">Маркетинг</button>
-						</li>
+						<!-- <div class="list-filter-box wrap"> -->
+							<li class="list-item">
+								<button class="button" type="button">Усі</button>
+							</li>
+							<li class="list-item">
+								<button class="button" type="button">Веб-сайти</button>
+							</li>
+							<li class="list-item">
+								<button class="button" type="button">Додатки</button>
+							</li>
+							<li class="list-item">
+								<button class="button" type="button">Дизайн</button>
+							</li>
+							<li class="list-item">
+								<button class="button" type="button">Маркетинг</button>
+							</li>
+						<!-- </div> -->
 					</ul>
-					<h1 class="gallery-title" hidden>Portfolio Gallery</h1>
+					<h1 class="gallery-title visually-hidden" hidden>
+						Portfolio Gallery
+					</h1>
 					<ul class="gallery-list list">
 						<li class="item">
 							<div class="porfolio-card">
@@ -115,10 +119,10 @@
 										width="370"
 										height="294"
 									/>
-								<div class="portfolio-discription">
+									<div class="portfolio-discription">
 										<h2 class="card-title">Ресторан Seafood</h2>
 										<p class="card-text">Додаток</p>
-								</div>
+									</div>
 								</a>
 							</div>
 						</li>
@@ -195,10 +199,10 @@
 										width="370"
 										height="294"
 									/>
-								<div class="portfolio-discription">
+									<div class="portfolio-discription">
 										<h2 class="card-title">Проєкт LAB</h2>
 										<p class="card-text">Маркетинг</p>
-								</div>
+									</div>
 								</a>
 							</div>
 						</li>
@@ -211,10 +215,10 @@
 										width="370"
 										height="294"
 									/>
-								<div class="portfolio-discription">
+									<div class="portfolio-discription">
 										<h2 class="card-title">Growing Business</h2>
 										<p class="card-text">Додаток</p>
-								</div>
+									</div>
 								</a>
 							</div>
 						</li>
