fixing my homework3

--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
 									width="270"
 									height="260"
 								/>
-								<h3 class="team-title">Ігор Дем'яненко</h3>
-								<p class="team-text">Product Designer</p>
+							<div class="team-discription">
+									<h3 class="team-title">Ігор Дем'яненко</h3>
+									<p class="team-text">Product Designer</p>
+							</div>
 							</div>
 						</li>
 						<li class="team-item">
@@ -147,8 +149,10 @@
 									width="270"
 									height="260"
 								/>
-								<h3 class="team-title">Ольга Рєпіна</h3>
-								<p class="team-text">Frontend Developer</p>
+								<div class="team-discription">
+									<h3 class="team-title">Ольга Рєпіна</h3>
+									<p class="team-text">Frontend Developer</p>
+								</div>
 							</div>
 						</li>
 						<li class="team-item">
@@ -160,8 +164,10 @@
 									width="270"
 									height="260"
 								/>
-								<h3 class="team-title">Микола Тарасов</h3>
-								<p class="team-text">Marketing</p>
+								<div class="team-discription">
+									<h3 class="team-title">Микола Тарасов</h3>
+									<p class="team-text">Marketing</p>
+								</div>
 							</div>
 						</li>
 						<li class="team-item">
@@ -173,8 +179,10 @@
 									width="270"
 									height="260"
 								/>
-								<h3 class="team-title">Михайло Єрмаков</h3>
-								<p class="team-text">UI Designer</p>
+								<div class="team-discription">
+									<h3 class="team-title">Михайло Єрмаков</h3>
+									<p class="team-text">UI Designer</p>
+								</div>
 							</div>
 						</li>
 					</ul>
